--- a/src/components/ui/buttons/SecondaryCTA.astro
+++ b/src/components/ui/buttons/SecondaryCTA.astro
@@ -11,9 +11,9 @@ interface Props {
 const baseClasses =
   "inline-flex items-center justify-center gap-x-2 rounded-lg px-4 py-3 text-center text-sm font-medium text-neutral-600 shadow-xs outline-hidden ring-zinc-500 focus-visible:ring-3 transition duration-300";
 const borderClasses = "border border-neutral-200";
-const bgColorClasses = "bg-neutral-300";
+const bgColorClasses = "bg-gradient-to-r from-red-100 to-purple-100";
 const hoverClasses =
-  "hover:bg-neutral-400/50 hover:text-neutral-600 active:text-neutral-700";
+  "hover:from-red-200 hover:to-purple-200 hover:text-neutral-700 active:text-neutral-800";
 const disableClasses = "disabled:pointer-events-none disabled:opacity-50";
 const fontSizeClasses = "2xl:text-base";
 const ringClasses = "ring-zinc-500";
