--- a/src/components/ui/starlight/SiteTitle.astro
+++ b/src/components/ui/starlight/SiteTitle.astro
@@ -9,12 +9,17 @@ const docs = "/" + locale + "welcome-to-docs/";
 ---
 
 <span class="site-title flex">
-  <a class="main-logo" href={main} set:html={mainLogo} aria-label="ScrewFast" />
+  <a
+    class="main-logo"
+    href={main}
+    set:html={mainLogo}
+    aria-label="Torque Craft"
+  />
   <a
     class="docs-logo"
     href={docs}
     set:html={docsLogo}
-    aria-label="ScrewFast Docs"
+    aria-label="Torque Craft Docs"
   />
 </span>
 
