--- a/src/components/ui/buttons/GithubBtn.astro
+++ b/src/components/ui/buttons/GithubBtn.astro
@@ -10,8 +10,10 @@ interface Props {
 const baseClasses =
   "group inline-flex items-center justify-center gap-x-3 rounded-lg px-4 py-3 text-center text-sm font-medium text-neutral-700 ring-zinc-500 focus-visible:ring-3 transition duration-300 outline-hidden";
 const borderClasses = "border border-transparent";
-const bgColorClasses = "bg-yellow-400 dark:focus:outline-hidden";
-const hoverClasses = "hover:shadow-2xl hover:shadow-yellow-500";
+const bgColorClasses =
+  "bg-gradient-to-r from-red-500 to-purple-600 dark:focus:outline-hidden";
+const hoverClasses =
+  "hover:shadow-2xl hover:shadow-red-500/50 hover:from-red-600 hover:to-purple-700";
 const fontSizeClasses = "2xl:text-base";
 const ringClasses = "dark:ring-zinc-200";
 ---
