--- a/src/components/ui/buttons/GoogleBtn.astro
+++ b/src/components/ui/buttons/GoogleBtn.astro
@@ -9,7 +9,7 @@ const baseClasses =
   "inline-flex w-full items-center justify-center gap-x-2 rounded-lg px-4 py-3 text-sm dark:text-neutral-400 font-medium text-neutral-600 shadow-xs transition duration-300 focus-visible:ring-3 outline-hidden";
 const borderClasses = "border border-neutral-200 dark:border-neutral-700";
 const bgColorClasses =
-  "bg-neutral-50 dark:bg-neutral-800 hover:bg-neutral-200 dark:hover:bg-neutral-900";
+  "bg-gradient-to-r from-red-50 to-purple-50 dark:from-neutral-800 dark:to-neutral-800 hover:from-red-100 hover:to-purple-100 dark:hover:from-neutral-700 dark:hover:to-neutral-700";
 const disableClasses = "disabled:pointer-events-none disabled:opacity-50";
 const ringClasses = "ring-zinc-500 dark:ring-zinc-200";
 const googleSVG = `<svg
