--- a/src/components/ui/buttons/ProductTabBtn.astro
+++ b/src/components/ui/buttons/ProductTabBtn.astro
@@ -27,7 +27,7 @@ const INACTIVE_HEADING_CLASS = "text-neutral-800 dark:text-neutral-200";
 >
   <!-- Tab text -->
   <span
-    class={`${HEADING_CLASS} ${first ? "text-orange-400 dark:text-orange-300" : INACTIVE_HEADING_CLASS}`}
+    class={`${HEADING_CLASS} ${first ? "text-red-500 dark:text-red-400" : INACTIVE_HEADING_CLASS}`}
   >
     {title}
   </span>
