--- a/src/components/ui/cards/CardInsight.astro
+++ b/src/components/ui/cards/CardInsight.astro
@@ -19,7 +19,7 @@ interface Props {
 
 <!-- The anchor tag is the root container for the "Insight" card. It links to the insight detail page. -->
 <a
-  class="group rounded-xl outline-hidden ring-zinc-500 transition duration-300 focus-visible:ring-3 dark:ring-zinc-200 dark:focus:outline-hidden"
+  class="group rounded-xl ring-zinc-500 outline-hidden transition duration-300 focus-visible:ring-3 dark:ring-zinc-200 dark:focus:outline-hidden"
   href={insightLocale && insightLocale !== "en"
     ? `/${insightLocale}/insights/${insightEntry.id.replace(/^fr\//, "")}/`
     : `/insights/${insightEntry.id.replace(/^en\//, "")}/`}
@@ -48,7 +48,7 @@ interface Props {
     </p>
     <!-- The "Read More" hyperlink going to the full insight. With an arrow icon -->
     <p
-      class="mt-5 inline-flex items-center gap-x-1 font-medium text-orange-400 decoration-2 group-hover:underline dark:text-orange-300"
+      class="mt-5 inline-flex items-center gap-x-1 font-medium text-red-500 decoration-2 group-hover:underline dark:text-red-400"
     >
       {label}
       <Icon name="arrowRightStatic" />
