--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -15,7 +15,7 @@ import { SITE } from "@data/constants";
 // Update getStaticPaths for English posts
 export async function getStaticPaths() {
   const blogPosts = await getCollection("blog", ({ id }) =>
-    id.startsWith("en/")
+    id.startsWith("en/"),
   );
   return blogPosts.map((post) => {
     const idWithoutLang = post.id.replace(/^en\//, ""); // Remove the "en/" prefix
@@ -31,7 +31,7 @@ const { post } = Astro.props;
 
 const blogPosts: CollectionEntry<"blog">[] = await getCollection(
   "blog",
-  ({ id }) => id.startsWith("en/")
+  ({ id }) => id.startsWith("en/"),
 );
 
 // Filter out the current post to get related posts
@@ -39,7 +39,7 @@ const blogPosts: CollectionEntry<"blog">[] = await getCollection(
 // In a production site, you might want to implement a more robust algorithm, choosing related posts based on tags, categories, dates, authors, or keywords.
 // See example: https://blog.codybrunner.com/2024/adding-related-articles-with-astro-content-collections/
 const relatedPosts: CollectionEntry<"blog">[] = blogPosts.filter(
-  (blogEntry) => blogEntry.id !== post.id
+  (blogEntry) => blogEntry.id !== post.id,
 );
 
 const pageTitle: string = `${post.data.title} | ${SITE.title}`;
@@ -68,12 +68,12 @@ const ogTitle = `${post.data.title} | Blog | ${SITE.title}`;
       name: SITE.title,
       logo: {
         "@type": "ImageObject",
-        url: "https://screwfast.uk/favicon.ico",
+        url: "https://torquecraft.uk/favicon.ico",
       },
     },
     mainEntityOfPage: {
       "@type": "WebPage",
-      "@id": `https://screwfast.uk/blog/${post.id.replace(/^en\//, "")}`,
+      "@id": `https://torquecraft.uk/blog/${post.id.replace(/^en\//, "")}`,
     },
   }}
 >
@@ -133,7 +133,7 @@ const ogTitle = `${post.data.title} | Blog | ${SITE.title}`;
               <p class="text-lg text-pretty text-neutral-700 dark:text-neutral-300">
                 {content}
               </p>
-            )
+            ),
           )
         }
       </div>
