--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -20,7 +20,7 @@ const englishInsightsEntries = await getCollection("insights", ({ id }) => {
 
 const blogPosts: CollectionEntry<"blog">[] = englishBlogEntries.sort(
   (a: CollectionEntry<"blog">, b: CollectionEntry<"blog">) =>
-    b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
+    b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
 );
 // Get all insights posts
 const insightPosts: CollectionEntry<"insights">[] = englishInsightsEntries;
@@ -50,15 +50,15 @@ const ogTitle = "Construction Industry Blog | ScrewFast";
   structuredData={{
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "@id": "https://screwfast.uk/blog",
-    url: "https://screwfast.uk/blog",
-    name: "Blog | ScrewFast",
+    "@id": "https://torquecraft.uk/blog",
+    url: "https://torquecraft.uk/blog",
+    name: "Blog | Torque Craft",
     description:
       "Stay up-to-date with the latest trends and developments in the construction industry with insights from ScrewFast's team of industry experts.",
     isPartOf: {
       "@type": "WebSite",
-      url: "https://screwfast.uk",
-      name: "ScrewFast",
+      url: "https://torquecraft.uk",
+      name: "Torque Craft",
       description:
         "ScrewFast offers top-tier hardware tools and expert construction services to meet all your project needs.",
     },
