--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -7,7 +7,7 @@ import { SITE } from "@data/constants";
 const pageTitle: string = `Contact | ${SITE.title}`;
 const metaDescription =
   "Have questions or want to discuss a project? Reach out, and let's craft the perfect solution with our tools and services.";
-const ogTitle = "Contact Us | ScrewFast";
+const ogTitle = "Contact Us | Torque Craft";
 ---
 
 <MainLayout
@@ -17,17 +17,17 @@ const ogTitle = "Contact Us | ScrewFast";
   structuredData={{
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "@id": "https://screwfast.uk/contact",
-    url: "https://screwfast.uk/contact",
-    name: "Contact Us | ScrewFast",
+    "@id": "https://torquecraft.uk/contact",
+    url: "https://torquecraft.uk/contact",
+    name: "Contact Us | Torque Craft",
     description:
       "Have questions or want to discuss a project? Reach out, and let's craft the perfect solution with our tools and services.",
     isPartOf: {
       "@type": "WebSite",
-      url: "https://screwfast.uk",
-      name: "ScrewFast",
+      url: "https://torquecraft.uk",
+      name: "Torque Craft",
       description:
-        "ScrewFast offers top-tier hardware tools and expert construction services to meet all your project needs.",
+        "Torque Craft offers top-tier hardware tools and expert construction services to meet all your project needs.",
     },
     inLanguage: "en-US",
   }}
