--- a/src/pages/fr/blog/index.astro
+++ b/src/pages/fr/blog/index.astro
@@ -20,7 +20,7 @@ const frenchInsightsEntries = await getCollection("insights", ({ id }) => {
 
 const blogPosts: CollectionEntry<"blog">[] = frenchBlogEntries.sort(
   (a: CollectionEntry<"blog">, b: CollectionEntry<"blog">) =>
-    b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
+    b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
 );
 // Get all insights posts
 const insightPosts: CollectionEntry<"insights">[] = frenchInsightsEntries;
@@ -51,15 +51,15 @@ const ogTitle = "Blog de l'Industrie de la Construction | ScrewFast";
   structuredData={{
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "@id": "https://screwfast.uk/fr/blog",
-    url: "https://screwfast.uk/fr/blog",
-    name: "Blog | ScrewFast",
+    "@id": "https://torquecraft.uk/fr/blog",
+    url: "https://torquecraft.uk/fr/blog",
+    name: "Blog | Torque Craft",
     description:
       "Restez informé des dernières tendances et évolutions dans le secteur de la construction avec les analyses de l'équipe d'experts de ScrewFast.",
     isPartOf: {
       "@type": "WebSite",
-      url: "https://screwfast.uk/fr",
-      name: "ScrewFast",
+      url: "https://torquecraft.uk/fr",
+      name: "Torque Craft",
       description:
         "ScrewFast propose des outils matériels de premier ordre et des services de construction experts pour répondre à tous vos besoins de projet.",
     },
