--- a/src/pages/fr/contact.astro
+++ b/src/pages/fr/contact.astro
@@ -7,7 +7,7 @@ import { SITE } from "@data/constants";
 const pageTitle: string = `Nous Contacter | ${SITE.title}`;
 const metaDescription =
   "Vous avez des questions ou souhaitez discuter d'un projet ? Contactez-nous et élaborons ensemble la solution parfaite avec nos outils et services.";
-const ogTitle = "Nous Contacter | ScrewFast";
+const ogTitle = "Nous Contacter | Torque Craft";
 ---
 
 <MainLayout
@@ -18,17 +18,17 @@ const ogTitle = "Nous Contacter | ScrewFast";
   structuredData={{
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "@id": "https://screwfast.uk/fr/contact",
-    url: "https://screwfast.uk/fr/contact",
-    name: "Nous Contacter | ScrewFast",
+    "@id": "https://torquecraft.uk/fr/contact",
+    url: "https://torquecraft.uk/fr/contact",
+    name: "Nous Contacter | Torque Craft",
     description:
       "Vous avez des questions ou souhaitez discuter d'un projet ? Contactez-nous et élaborons ensemble la solution parfaite avec nos outils et services.",
     isPartOf: {
       "@type": "WebSite",
-      url: "https://screwfast.uk/fr/",
-      name: "ScrewFast",
+      url: "https://torquecraft.uk/fr/",
+      name: "Torque Craft",
       description:
-        "ScrewFast propose des outils matériels de premier ordre et des services de construction experts pour répondre à tous vos besoins de projet.",
+        "Torque Craft propose des outils matériels de premier ordre et des services de construction experts pour répondre à tous vos besoins de projet.",
     },
     inLanguage: "fr",
   }}
