--- a/src/pages/fr/insights/[id].astro
+++ b/src/pages/fr/insights/[id].astro
@@ -8,7 +8,7 @@ import { getCollection, render } from "astro:content";
 // Use `getStaticPaths` to generate static routes for generated pages on build
 export async function getStaticPaths() {
   const insightPosts = await getCollection("insights", ({ id }) =>
-    id.startsWith("fr/")
+    id.startsWith("fr/"),
   );
   return insightPosts.map((post) => {
     const idWithoutLang = post.id.replace(/^fr\//, ""); // Remove the "fr/" prefix
@@ -49,12 +49,12 @@ const ogTitle = `${post.data.title} | Insights | ${SITE.title}`;
       name: SITE.title,
       logo: {
         "@type": "ImageObject",
-        url: "https://screwfast.uk/favicon.ico",
+        url: "https://torquecraft.uk/favicon.ico",
       },
     },
     mainEntityOfPage: {
       "@type": "WebPage",
-      "@id": `https://screwfast.uk/fr/insights/${post.id.replace(/^fr\//, "")}`,
+      "@id": `https://torquecraft.uk/fr/insights/${post.id.replace(/^fr\//, "")}`,
     },
     inLanguage: "fr",
   }}
@@ -74,7 +74,7 @@ const ogTitle = `${post.data.title} | Insights | ${SITE.title}`;
           </div>
           <div
             id="progress-mobile"
-            class="fixed top-0 left-0 h-2 w-full bg-linear-to-r from-orange-400/30 to-orange-400 md:hidden"
+            class="fixed top-0 left-0 h-2 w-full bg-gradient-to-r from-red-400/30 to-purple-500 md:hidden"
           >
           </div>
           <div id="pin" class="mt-10 hidden space-y-4 md:block">
@@ -83,7 +83,7 @@ const ogTitle = `${post.data.title} | Insights | ${SITE.title}`;
             >
               <div
                 id="progress"
-                class="h-px w-full bg-linear-to-r from-orange-400/30 to-orange-400"
+                class="h-px w-full bg-gradient-to-r from-red-400/30 to-purple-500"
               >
               </div>
             </div>
