--- a/src/pages/fr/products/[id].astro
+++ b/src/pages/fr/products/[id].astro
@@ -17,7 +17,7 @@ declare global {
 
 export async function getStaticPaths() {
   const productEntries = await getCollection("products", ({ id }) =>
-    id.startsWith("fr/")
+    id.startsWith("fr/"),
   );
   return productEntries.map((product) => {
     const idWithoutLang = product.id.replace(/^fr\//, ""); // Remove the "fr/" prefix
@@ -32,7 +32,7 @@ const { product } = Astro.props;
 
 const pageTitle: string = `${product.data.title} | ${SITE.title}`;
 const metaDescription = product.data.description;
-const ogTitle = `${product.data.title} | Outils Matériels | ScrewFast`;
+const ogTitle = `${product.data.title} | Outils Matériels | Torque Craft`;
 ---
 
 <MainLayout
@@ -43,12 +43,12 @@ const ogTitle = `${product.data.title} | Outils Matériels | ScrewFast`;
   structuredData={{
     "@context": "https://schema.org",
     "@type": "Product",
-    "@id": `https://screwfast.uk/fr/products/${product.data.title.toLowerCase().replace(/\s+/g, "-")}`,
+    "@id": `https://torquecraft.uk/fr/products/${product.data.title.toLowerCase().replace(/\s+/g, "-")}`,
     name: product.data.title,
     description: product.data.description,
     brand: {
       "@type": "Brand",
-      name: "ScrewFast",
+      name: "Torque Craft",
     },
     inLanguage: "fr",
   }}
@@ -202,7 +202,7 @@ const ogTitle = `${product.data.title} | Outils Matériels | ScrewFast`;
                                     >
                                       {header}
                                     </th>
-                                  )
+                                  ),
                                 )}
                               </tr>
                             </thead>
@@ -219,7 +219,7 @@ const ogTitle = `${product.data.title} | Outils Matériels | ScrewFast`;
                                       </td>
                                     ))}
                                   </tr>
-                                ))
+                                )),
                               )}
                             </tbody>
                           </table>
@@ -281,7 +281,7 @@ const ogTitle = `${product.data.title} | Outils Matériels | ScrewFast`;
 
   function setElementAnimationDefaults(
     id: string,
-    settings: AnimationSettings
+    settings: AnimationSettings,
   ) {
     gsap.set(id, settings);
   }
@@ -317,13 +317,13 @@ const ogTitle = `${product.data.title} | Outils Matériels | ScrewFast`;
   timeline.to(
     "#fadeInUp",
     { duration: 1.5, autoAlpha: 1, y: 0, ease: "power2.out" },
-    "-=1.2"
+    "-=1.2",
   );
 
   timeline.to(
     "#fadeInMoveRight",
     { duration: 1.5, autoAlpha: 1, x: 0, ease: "power2.inOut" },
-    "-=1.4"
+    "-=1.4",
   );
 
   timeline.to("#overlay", { duration: 1, autoAlpha: 0, delay: 0.2 });
@@ -336,7 +336,7 @@ const ogTitle = `${product.data.title} | Outils Matériels | ScrewFast`;
           "active",
           "bg-neutral-100",
           "hover:border-transparent",
-          "dark:bg-white/[.05]"
+          "dark:bg-white/[.05]",
         );
 
         const tabId = btn.getAttribute("data-target");
@@ -350,7 +350,7 @@ const ogTitle = `${product.data.title} | Outils Matériels | ScrewFast`;
         changeHeadingStyle(
           btn,
           ["text-neutral-800", "dark:text-neutral-200"],
-          ["text-orange-400", "dark:text-orange-300"]
+          ["text-red-500", "dark:text-red-400"],
         );
       }
     }
@@ -360,7 +360,7 @@ const ogTitle = `${product.data.title} | Outils Matériels | ScrewFast`;
         "active",
         "bg-neutral-100",
         ",hover:border-transparent",
-        "dark:bg-white/[.05]"
+        "dark:bg-white/[.05]",
       );
 
       const tabId = button.getAttribute("data-target");
@@ -373,15 +373,15 @@ const ogTitle = `${product.data.title} | Outils Matériels | ScrewFast`;
 
       changeHeadingStyle(
         button,
-        ["text-orange-400", "dark:text-orange-300"],
-        ["text-neutral-800", "dark:text-neutral-200"]
+        ["text-red-500", "dark:text-red-400"],
+        ["text-neutral-800", "dark:text-neutral-200"],
       );
     }
 
     function changeHeadingStyle(
       button: any,
       addClasses: any,
-      removeClasses: any
+      removeClasses: any,
     ) {
       let heading = button.querySelector("span");
       if (heading) {
@@ -395,8 +395,8 @@ const ogTitle = `${product.data.title} | Outils Matériels | ScrewFast`;
     if (tabButtons.length > 0) {
       changeHeadingStyle(
         tabButtons[0],
-        ["text-orange-400", "dark:text-orange-300"],
-        []
+        ["text-red-500", "dark:text-red-400"],
+        [],
       );
     }
 
