--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -67,7 +67,7 @@ const avatarSrcs: Array<string> = [
   />
 
   <FeaturesNavs
-    title=`Customize <span class="text-yellow-500 dark:text-yellow-400">Torque Craft</span>'s offerings to perfectly suit your hardware and construction needs.`
+    title=`Customize <span class="text-red-500 dark:text-red-400">Torque Craft</span>'s offerings to perfectly suit your hardware and construction needs.`
     tabs={[
       {
         heading: "Cutting-Edge Tools",
